--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "@nuxtjs/axios": "^5.9.7",
+    "nuxt": "^2.0.0",
+    "nuxt-validate": "^1.0.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.0.0"
