--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.7",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "nuxt": "^2.0.0",
     "nuxt-validate": "^1.0.1"
   },
