setup for heroku

--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.7",
     "@nuxtjs/onesignal": "^3.0.0-beta.16",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "nuxt": "^2.0.0",
+    "nuxt-start": "^2.12.2",
     "nuxt-validate": "^1.0.1"
   },
   "devDependencies": {
